# GreatSummoners

./: LICENSE  README.md
data/Field/: GameField.json
data/Saves/: OneMoreSave.json  Save.json
data/Schools/: MEPhI.json  MSU.json
data/Skills/: Demidovich.json  GoToAcademicLeave.json  GoToKB.json  GoogleForAnswers.json  TFKP.json  VisitLection.json
data/Summoners/: D.S.Telyakovskii.json  Student.json
data/Units/: AcademicLeave.json  Calculus.json  ImaginaryUnit.json  RedBull.json  SweetSleep.json  Wolfram.json
data/UserSaves/: 2024-12-22-16-16-02.json  2024-12-22-18-42-14.json  2024-12-22-19-14-15.json
game/: .clangd  CMakeLists.txt  summoners.cpp
lib/include/: CellType.hpp  GameCell.hpp  GameManager.hpp  GameView.hpp  MatrixIterators.hpp  SchoolsTable.hpp  descriptors.hpp  factory.hpp  game.hpp  matrix.hpp  school.hpp  skill.hpp  units.hpp
lib/src/: GameManager.cpp  GameView.cpp  SchoolsTable.cpp  game.cpp  units.cpp
test/: CMakeLists.txt  test.cpp
